# paas-tdln-demo-apps

./: .drone.yml  LICENSE  README.md
complex/: deploy.sh  docker-compose.yml  manifest.yml
complex/db-migrations/: V1__create_questions_table.sql  V2__increase_question_length.sql
complex/frontend/: Dockerfile  index.js  package-lock.json  package.json
complex/frontend/assets/: questions-component.js  questions-component.test.js
complex/frontend/views/: architecture.njk  ask.njk  error.njk  home.njk  layout.njk
complex/qr-code/: .cfignore  Dockerfile  Program.fs  Startup.fs  buildpack.yml  index.html  qr-code.fsproj
complex/qr-code/Controllers/: QRController.fs
complex/qr-code/Properties/: launchSettings.json
complex/qr-code/QrCodeTests/: QrCodeTests.fsproj
complex/qr-code/QrCodeTests/Controllers/: QRControllerTests.fs
complex/question-list/: go.mod  go.sum  main.go  main_test.go  question_list_suite_test.go
complex/question-submit/: Dockerfile  Main.hs  question-submit.cabal
trivial/: index.html  manifest.yml
