name:                question-submit
version:             0.1.0.0
license:             MIT
author:              Richard Towers
maintainer:          richard.towers@digital.cabinet-office.gov.uk
copyright:           Crown Copyright
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable question-submit
  default-language:    Haskell2010
  main-is:             Main.hs
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , aeson  == 1.4.2.0
                     , postgresql-simple == 0.6
                     , http-types == 0.12.2
                     , bytestring == 0.10.8.2
                     , scotty == 0.11.2

